fix width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,13 @@ body {
 .product__image {
   flex: 1 1 auto;
   position: relative;
-  /* padding-bottom: 90%; */
   padding-bottom: 800px;
+}
+
+@media screen and (max-width: 768px) {
+  .product__image {
+    padding-bottom: 90%;
+  }
 }
 
 .product__image::after {
